updated issues with led-message in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -717,7 +717,7 @@ rt {
 
 .led-message {
     display: inline-block;
-    color: var(--text-color);
+    color: var(--dark);
     font-weight: 10;
     font-size: 16px;
     will-change: transform;
